syntax = "proto3";

option go_package = "github.com/andymarkow/go-metrics-collector/internal/grpc/api/metric/v1";

package collector.metric.v1;

import "metric_request.proto";
import "metric_response.proto";

service MetricService {
    rpc UpdateMetric (stream UpdateMetricRequest) returns (UpdateMetricResponse) {}
}
