syntax = "proto3";

option go_package = "github.com/andymarkow/go-metrics-collector/internal/grpc/api/metric/v1";

package collector.metric.v1;

import "payload.proto";

message UpdateMetricsRequest {
    Payload payload = 1;
}
